@startuml
'https://plantuml.com/class-diagram

skinparam backgroundcolor grey

entity CelestialBodyTable {
*celestialBodyId: String
--
* name: String
* mass: Number
* diameter: Number
* composition: String
homeSolarSystems: List<Strings>
}

entity SolarSystemTable {
* solarSystemId: String
--
* name: String
celestialBodies: List<CelestialBody>
distanceFromStar: Map<string, number>
}

class CelestialBody {
-id
-name: String
-size: Integer
-composition: String
homeSolarSystems: List<Strings>
}
class AetherArkServiceUtility{
}
class SolarSystem {
-Id
-name: String
-celestialBodies: List<CelestialBodies>
-positionMap: Map<CelestialBody, Integer>
}
class SolarSystemDao {
+get() : SolarSystem
+save() : SolarSystem
+delete() : SolarSystem
}
class CelestialBodyDao {
+get() : CelestialBody
+save() : CelestialBody
+delete() : CelestialBody
}
class CelestialBodyActivityProviderClasses {
lambdaHelper(Request): Result
}
class SolarSystemActivityProviderClasses {
lambdaHelper(Request): Result
}
class CelestialBodyActivityClasses {
CelestialBodyFunction(Request): CelestialBodyModel
}
class SolarSystemActivityClasses {
solarSystemFunction(Request): SolarSystemModel
}
class CelestialBodyModel {
-name: String
-mass : Number
-diameter : Number
-composition: String
-homeSolarSystems
}
class SolarSystemModel {
-id: String
-name: String
-celestialBodiesList: List<CelestialBodies>
-positionMap: Map<CelestialBodyName, distance>
}
class ModelConverter{
+convertToUserModel() : UserModel
+convertToSolarSystemModel() : SolarSystemModel
+convertToCelestialBodyModel() : CelestialBody
}

CelestialBodyActivityProviderClasses -- CelestialBodyActivityClasses
SolarSystemActivityProviderClasses -- SolarSystemActivityClasses

CelestialBodyActivityClasses -- CelestialBodyDao
CelestialBodyActivityClasses -- CelestialBodyModel
CelestialBodyActivityClasses -- CelestialBody
CelestialBodyDao - CelestialBody
CelestialBody -- CelestialBodyTable

SolarSystemActivityClasses -- SolarSystemDao
SolarSystemActivityClasses -- SolarSystemModel
SolarSystemDao - SolarSystem
SolarSystemActivityClasses - SolarSystem
SolarSystem -- SolarSystemTable

ModelConverter - CelestialBodyModel
ModelConverter - SolarSystemModel
ModelConverter -- CelestialBodyActivityClasses
ModelConverter -- SolarSystemActivityClasses

newpage

entity UserTable {
* userId: String
--
* name: String
email: String
solarSystemIds: List<String>
celestialBodyIds: List<String>
}
class User {
-id: String
-name: String
-email: String
-solarSystemIds: List<String>
-celestialBodyIds: List<String>
}
class UserDao {
-dynamoDBMapper : DynamoDBMapper
+get() : User
+save() : User
+delete() : User
}
class UserModel {
-userId: String
-name: String
-email: String
-solarSystemIds: List<String>
-celestialBodyIds: List<String>
}
class UserActivityClasses {
-userDao : UserDao
UserFunction(Request): UserModel
}
class UserActivityProviderClasses{
+lambdaHelper(Request): Result
}

class ModelConverter{
+convertToUserModel() : UserModel
}
User -- UserTable
User -- UserDao
ModelConverter -- UserModel
UserActivityClasses -- ModelConverter
UserActivityClasses -- UserDao
UserActivityProviderClasses -- UserActivityClasses
@enduml